trunk/objects/TeamSubscription__c.object
<CustomObject>
    <fields>
        <fullName>DiscussionNewReply__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DiscussionNewReply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DiscussionNewTopic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DiscussionNewTopic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DiscussionReplyToMe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DiscussionReplyToMe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectTaskAssignToMeChanged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProjectTaskAssignToMeChanged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectTaskAssignedToMe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProjectTaskAssignedToMe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectTaskChanged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProjectTaskChanged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectTaskDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProjectTaskDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TeamMemberJoinLeave__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TeamMemberJoinLeave</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TeamMemberStatusUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TeamMemberStatusUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipName>TeamSuscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TeamSuscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WikiCreatedByMeUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WikiCreatedByMeUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WikiNewPage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WikiNewPage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WikiPageUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WikiPageUpdated</label>
        <type>Checkbox</type>
    </fields>
    <label>TeamSubscription</label>
    <nameField>
        <label>TeamSubscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TeamSubscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>